# ocelot

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh  pprint  test.rs
.github/workflows/: main.yml
src/: __init__.py  bot_v_bot.py  main.rs  random-moves.py  search_time.py  testing.py  tui.py  tui.rs
src/bot/: __init__.py  mod.rs  robot.py  uci.py
src/bot/uci/: fen.rs  go.rs  mod.rs
src/evaluation/: __init__.py  heuristic.rs  manual.py  mod.rs  search.py  search.rs
src/evaluation/search/: mod.rs  time.rs  tree.rs
src/inference/: __init__.py
src/mechanics/: __init__.py  board.py  piece.py
src/physical/: __init__.py  board.py  board.rs  custom_enum.py  mod.rs  movement.py  movement.rs
src/physical/movement/: board.rs  generation.rs  mod.rs  types.rs
testing/: all.sh  board_dupe.py  check.py  knight.py  physics_test.py  speed.py  test.py  testlib.py
testing/accuracy/: __init__.py  hanging_queen.py  ladder_mate.py
testing/movement/: castling.py  diagonal.py  en_passant.py  king.py  physics_test.py
testing/representation/: castling.py  knight.py  promotion.py  undo.py
