[package]
name = "ocelot-chess"
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["left-alert-chaos"]
description = "A simple(ish) chess engine written entirely in Rust with no dependencies."
readme = "README.md"
repository = "https://github.com/left-alert-chaos/ocelot"
keywords = ["chess", "engine", "game", "games"]
categories = ["games"]
homepage = "https://github.com/left-alert-chaos/ocelot"
exclude = [
	"assets",
	".github",
	"target",
	"install.sh",
	"AGENTS.md",
]

[dependencies]
